ERROR.txt
/homes/eva/xw/xwojac00/CompilerProject2015-master (1)/CompilerProject2015-master$ make
gcc -Wall -std=c99 -pedantic -g -lm -c main.c
main.c: In function ‘main’:
main.c:49:9: warning: ‘f’ may be used uninitialized in this function [-Wmaybe-uninitialized]
         fclose(f);
         ^
gcc -Wall -std=c99 -pedantic -g -lm -c str.c
gcc -Wall -std=c99 -pedantic -g -lm -c instlist.c
gcc -Wall -std=c99 -pedantic -g -lm -c stable.c
gcc -Wall -std=c99 -pedantic -g -lm -c interpret.c
gcc -Wall -std=c99 -pedantic -g -lm -c errors.c
gcc -Wall -std=c99 -pedantic -g -lm -c ial.c
gcc -Wall -std=c99 -pedantic -g -lm -c parser.c
parser.c: In function ‘comp_expr’:
parser.c:552:4: warning: implicit declaration of function ‘TReduction’ [-Wimplicit-function-declaration]
    chba = (TReduction(&St, i + 1, prom->LInstr));
    ^
parser.c:561:4: warning: implicit declaration of function ‘Tpush’ [-Wimplicit-function-declaration]
    chba = Tpush(&St);
    ^
gcc -Wall -std=c99 -pedantic -g -lm -c lex.c
gcc -Wall -std=c99 -pedantic -g -lm -c 3ac.c
In file included from 3ac.c:12:0:
stable.h:16:3: error: unknown type name ‘bool’
   bool isinit;
   ^
stable.h:26:30: error: ‘TABLE_SIZE’ undeclared here (not in a function)
 typedef tLTableItem *localTS[TABLE_SIZE];
                              ^
stable.h:34:3: error: unknown type name ‘bool’
   bool isdef;
   ^
stable.h:36:12: warning: type defaults to ‘int’ in declaration of ‘LTable’
   localTS *LTable;
            ^
stable.h:37:3: error: unknown type name ‘TinstList’
   TinstList *LInstr;
   ^
stable.h:60:27: warning: type defaults to ‘int’ in declaration of ‘T’
 int GtableInit (globalTS *T);
                           ^
stable.h:61:27: warning: type defaults to ‘int’ in declaration of ‘T’
 int GtableFree (globalTS *T);
                           ^
stable.h:68:29: warning: type defaults to ‘int’ in declaration of ‘T’
 int GtableInsert (globalTS *T, string *key, int funcType); 
                             ^
stable.h:70:33: warning: type defaults to ‘int’ in declaration of ‘T’
 tGData* GtableSearch (globalTS *T, string *key);
                                 ^
stable.h:71:34: warning: type defaults to ‘int’ in declaration of ‘T’
 int GtableInsertParam (globalTS *T, string *funcID, string *parID, int parType);
                                  ^
stable.h:72:32: warning: type defaults to ‘int’ in declaration of ‘T’
 int GtableInsertVar (globalTS *T, string *funcID, string *varID, int varType);
                                ^
stable.h:73:35: warning: type defaults to ‘int’ in declaration of ‘T’
 int GtableInsertVarVal (globalTS *T, string *funcID, string *varID, Tvalue v);
                                   ^
stable.h:74:34: warning: type defaults to ‘int’ in declaration of ‘T’
 int GtableInsertInstr (globalTS *T, string *funcID, Tinst *instrukce);
                                  ^
stable.h:74:53: error: unknown type name ‘Tinst’
 int GtableInsertInstr (globalTS *T, string *funcID, Tinst *instrukce);
                                                     ^
stable.h:81:26: warning: type defaults to ‘int’ in declaration of ‘T’
 int LtableInit (localTS *T);
                          ^
stable.h:82:26: warning: type defaults to ‘int’ in declaration of ‘T’
 int LtableFree (localTS *T);
                          ^
stable.h:86:28: warning: type defaults to ‘int’ in declaration of ‘T’
 int LtableInsert (localTS *T, string *key, int varType); 
                            ^
stable.h:88:32: warning: type defaults to ‘int’ in declaration of ‘T’
 tLData* LtableSearch (localTS *T, string *key);
                                ^
stable.h:89:33: warning: type defaults to ‘int’ in declaration of ‘T’
 int LtableInsertValue (localTS *T, string *key, Tvalue v);
                                 ^
3ac.c: In function ‘genInstr’:
3ac.c:26:5: warning: function returns address of local variable [-Wreturn-local-addr]
     return &TItem;
     ^
make: *** [3ac.o] Error 1
